convert md to html

--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 <p>Este encontro representa uma excelente oportunidade para se aprofundar na linguagem Python, explorar suas vastas possibilidades, e discutir projetos inovadores desenvolvidos com ela. Além disso, é uma chance ímpar para expandir seu networking com outros programadores Python de Belo Horizonte e de todo o estado.</p>
 <p>Para garantir sua participação, faça sua inscrição pelo link <a href="https://www.meetup.com/pythonmg/events/299753134">https://www.meetup.com/pythonmg/events/299753134</a>, , observando que as vagas são limitadas.</p>
 <p>Todos os participantes receberão certificados, que podem ser utilizados como comprovantes de horas complementares ou para atividades extracurriculares.</p>
-<p>Para mais informações, entre em contato pelo <a href="https://t.me/pythonmg">telegram</a>. As mídias sociais do Python-MG são:
-- <a href="https://www.instagram.com/python.mg">instagram</a>.</p>
-<p>As mídias sociais do COMPET são:
-- <a href="https://www.instagram.com/compet.cefet/">instagram</a>
-- <a href="https://www.linkedin.com/company/compet-cefetmg/">linkedin</a>
-- <a href="https://twitter.com/compet_cefet">twitter</a></p>
+<p>Para mais informações, entre em contato pelo <a href="https://t.me/pythonmg">telegram</a>. As mídias sociais do Python-MG são:</p>
+<ul>
+<li><a href="https://www.instagram.com/python.mg">instagram</a>.</li>
+</ul>
+<p>As mídias sociais do COMPET são:</p>
+<ul>
+<li><a href="https://www.instagram.com/compet.cefet/">instagram</a></li>
+<li><a href="https://www.linkedin.com/company/compet-cefetmg/">linkedin</a></li>
+<li><a href="https://twitter.com/compet_cefet">twitter</a></li>
+</ul>
